# Universal-Agent-Runtime-UAR-

./: .coverage  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  BURN_IN_REPORT.md  CHANGELOG.md  CONFORMANCE.md  DOCUMENTATION_INDEX.md  Dockerfile.prod  Dockerfile.runtime  KNOWN_STABILITY_LIMITS.md  LICENSE  Makefile  ONBOARDING.md  PHASE_OMEGA_IV.md  PHASE_OMEGA_V.md  Procfile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  REVIEW.md  SYSTEM.md  UI_UX_Implementation_Summary.md  UI_UX_Review.md  alembic.ini  boot.sh  comprehensive-tests.md  docker-compose.prod.yml  docker-compose.runtime.yml  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  start.sh  uar.sqlite3-shm  uar.sqlite3-wal
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: burnin-hardening.yml  ci.yml  destructive-diff-guard.yml  frontend-build.yml  phase3-wire-sandbox.yml  runtime-burn-in.yml  runtime-governance.yml  runtime_governance.yml  smoke-and-unit-tests.yml  test.yml
.windsurf/workflows/: regression.md
apps/api-python/: agent_loop.py  agent_planner.py  context_loader.py  lineage.py  main.py  objects.py  proof_objects.py  requirements.txt  run_memory.py  sandbox.py  schema.py  skills.py  strategy_engine.py  uor_bridge.py
apps/operator-dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
apps/web-svelte/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts
data/: actuarial.db
deploy/: docker-compose.monitoring.yml
deploy/grafana/: uor-alignment-dashboard.json
deploy/prometheus/: prometheus.yml
docs/: ADR-001-circuit-breaker-pattern.md  ADR-002-caching-strategy.md  ADR-003-skill-registry-pattern.md  ADR-004-one-uar.md  ADR-005-service-layer-refactor.md  ADVANCED_INTEGRATIONS.md  API_REPLAY_CONFIDENCE.md  ARCHITECTURE.md  ARCHITECT_RUNBOOK.md  AUTHORITATIVE_DOCS.md  BOOT_AND_SHUTDOWN.md  BOOT_CAPTURE.md  BOOT_SEQUENCE.md  BURN_IN_CHECKLIST.md  BURN_IN_PLAN.md  CAPABILITIES.md  CAPABILITY_MAP.md  CERTIFICATION_MODEL.md  CERTIFICATION_REPORT_TEMPLATE.md  CI_REJECTION_GATES.md  CONTRACT_VERSION.md  CONVENTIONS.md  CONVERGENCE_CERTIFICATION.md  CURRENT_RUNTIME_STATE.md  DEPENDENCIES.md  DEPENDENCY_COMPLIANCE.md  DEPENDENCY_MATRIX.md  DEVELOPMENT_PATH_ARCHITECTURE.md  ENTERPRISE_POST_SCRUM_REVIEW.md  ENTERPRISE_REVIEW_AND_PLAN.md  ERROR_GUIDE.md  EXECUTION_CONSTITUTION.md  FEATURE_GAP_REMEDIATION.md  GETTING_STARTED.md  GOLDEN_REPLAY_ENFORCEMENT.md  GOLDEN_TRACE_POLICY.md  GOVERNANCE_RESILIENCE_TESTING.md  HOLISTIC_REVIEW.md  INTEGRATION_GUIDE.md  KNOWN_LIMITS.md  (+49 more)
docs/architecture/: RUNTIME_BOUNDARY_AUDIT.md
docs/audit/: SKILL_AUDIT_2026-05-29.md  SKILL_COMPLETION_PLAN.md
docs/contracts/: WORKLOAD_CONTRACT_V1.md
docs/diagrams/: README.md
docs/hardening/: HARDENING_ONLY_EPOCH.md
docs/implementation/: REPLAY_CONFIDENCE_IMPLEMENTATION.md
docs/issues/: FIXES_BATCH_5_2026_05_31.md  FIXES_BATCH_6_2026_05_31.md  ISSUE-85-runtime-health-query-consolidation.md  ISSUE-86-burnin-persistence-layer.md  ISSUE-87-certification-engine-refactor.md
docs/operations/: BURNIN_ARTIFACTS.md  BURN_IN_PROCEDURE.md  CERTIFICATION.md  CONVERGENCE_TUNING.md  LIVE_TELEMETRY_SESSIONS.md  MISSION_CONTROL.md  OBSERVER_SAFETY.md  OPERATIONAL_LAYER_SUPPORT.md  REPLAY_EXPLORER.md  RUNTIME_CERTIFICATION.md  RUNTIME_HEALTH.md  TESTING_PROTOCOLS.md  TOPOLOGY_VISUALIZATION.md
docs/releases/: UAR_V1_1_CHIEF_ARCHITECT_DIRECTIVE.md  UAR_V1_1_EXECUTION_CAMPAIGN.md  UAR_V1_1_OPERATIONAL_RUNTIME_ROLLOUT.md
docs/roadmap/: UAR_RUNTIME_SEPARATION_AND_OPS_PLAN.md
docs/runbooks/: PagerDuty-OnCall.md  UARDown.md  UARHealthProbeFailing.md  UARHighErrorRate.md  UARHighLatencyP99.md  UARRedisDisconnected.md  UARTooManyWebSocketConnections.md
docs/runtime-governance/: constitutional-dispatch.md  live-replay-engine.md  replay-recovery.md  (+11 more)
examples/: agent_workflow_example.py  graphrag_example.py  guardrails_example.py  uor_ecosystem_example.py  uor_integration_example.py  user_uor_workflow_example.py
migrations/: README  env.py
observability/: alertmanager.yml  alerts.yml  blackbox.yml  loki.yml  prometheus.yml
scripts/: burn_in.sh  check_no_fstring_logging.sh  deploy.sh  dev_boot.sh  docker-entrypoint.sh  enable_dev_cors.py  fetch_uor_artifacts.py  first_run.sh  local_validate.sh  phase3_wire_sandbox.py  quickstart.sh  run.sh  run_runtime_api.sh  runtime_env_check.sh  runtime_install.sh  runtime_quickstart.sh  runtime_smoke.sh  test_integration.sh  test_new_features.sh  uar  uor_provenance.py  uor_upstream_watcher.py  validate_config.py  validate_runtime_governance.py  validate_uor_alignment.py  wire_agent_strategy_workflow.py  wire_memory_query_endpoint.py
specs/: agent-contract-v1.json  object-envelope-v1.json  recipes.json
tests/: KNOWN_BUG_TEST_LIST.md  README.md  adversarial_audit.py  benchmark_skills.py  conftest.py  monte_carlo_user_sim.py  smoke_test.py  test_agent_framework.py  test_api.py  test_api_comprehensive.py  test_autonomi_validation.py  test_burn_in.py  test_certification.py  test_cli.py  test_compat.py  test_config_advanced.py  test_constitutional_execution_chain.py  test_constitutional_no_bypass.py  test_control_plane.py  test_crewai_integration.py  test_dependency_compatibility.py  test_distributed.py  test_documentation_consistency.py  test_error_handling.py  test_execution_authority.py  test_executor_authority_adapter.py  test_extended_review.py  test_fabric_forecasting.py  test_fabric_health_overlay.py  test_fabric_orchestrator.py  test_failure_paths.py  test_feature_alignment.py  test_flexible_graphrag.py  test_governed_executor.py  test_graph_integrity.py  test_guardrails.py  test_integration.py  test_invariants.py  test_live_replay_engine.py  test_math_plot.py  (+66 more)
uar/: __init__.py  boot.py  config.py  config_advanced.py  version.py
universal_agent_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+748 files in other folders)
