[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-agent-runtime"
version = "1.1.0"
description = "Universal Agnostic Runtime for modular goal-driven agent execution."
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.0,<3.0",
  "pypdf>=4.0,<5.0",
  "python-docx>=1.1,<2.0",
  "openpyxl>=3.1,<4.0",
  "nbformat>=5.9,<6.0",
  "pandas>=2.0,<3.0",
  "pyarrow>=14.0,<16.0",
  "python-multipart>=0.0.9,<1.0",
  "rfc8785>=0.1.0,<1.0",
  "uor-addr>=0.2,<1.0",
  # Core math and crypto libraries (required for full skill suite)
  "numpy>=1.24",
  "matplotlib>=3.0,<4.0",
  "sympy>=1.12",
  "pycryptodome>=3.20",
  # Additional utilities
  "tenacity>=8.0,<9.0",
  "rich>=13.0,<14.0",
  "typer>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=4.0,<5.0",
  "ruff>=0.1,<1.0",
  "mypy>=1.0,<2.0",
  "types-requests>=2.31,<3.0",
  "requests>=2.31,<3.0",
  "jsonschema>=4.21,<5.0",
  "pyshacl>=0.20,<1.0",
  "rdflib>=7.0,<8.0",
]
# UOR capabilities (mathematical foundations and distributed graphs)
uor = [
  "numpy>=1.24",
  "dnspython>=2.4,<3.0",
  "pyshacl>=0.20,<1.0",
  "rdflib>=7.0,<8.0",
  "blake3>=0.4,<1.0",
  "cryptography>=42.0,<43.0",
]
# Advanced integrations (heavy dependencies)
advanced = [
  "unstructured[local-inference]>=0.12,<1.0",
  "docling>=2.0,<3.0",
  "autogen>=0.4,<1.0",
  "crewai>=0.80,<1.0",
  "llama-index>=0.10,<1.0",
  "llama-index-graph-stores-neo4j>=0.1,<1.0",
  "dagster>=1.7,<2.0",
  "dagster-webserver>=1.7,<2.0",
  "neo4j>=5.0,<6.0",
  "chromadb>=0.4,<1.0",
  "qdrant-client>=1.9,<2.0",
]
# Individual integration groups for selective installation
doc-processing = [
  "unstructured[local-inference]>=0.12,<1.0",
  "docling>=2.0,<3.0",
]
agent-orchestration = [
  "autogen>=0.4,<1.0",
  "crewai>=0.80,<1.0",
]
advanced-rag = [
  "llama-index>=0.10,<1.0",
  "llama-index-graph-stores-neo4j>=0.1,<1.0",
  "neo4j>=5.0,<6.0",
  "chromadb>=0.4,<1.0",
  "qdrant-client>=1.9,<2.0",
]
pipeline-orchestration = [
  "dagster>=1.7,<2.0",
  "dagster-webserver>=1.7,<2.0",
]
graphrag = [
  "graphrag>=1.0,<2.0",
]
autonomi = [
  "autonomi>=0.3,<1.0",
]
# SaaS integrations
convex = [
  "convex>=0.21,<1.0",
]
greptile = [
  "httpx>=0.27,<1.0",
]

[project.scripts]
uar = "uar.cli.main:app"

[tool.setuptools.packages.find]
include = ["uar*"]
exclude = ["apps*", "tests*", "docs*", "specs*"]

[tool.setuptools.package-data]
uar = ["py.typed", "**/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::DeprecationWarning:multiprocessing.popen_fork",
]

[tool.mypy]
python_version = "3.11"
files = ["uar", "tests"]

[[tool.mypy.overrides]]
module = [
    "psycopg",
    "psycopg2",
    "redis",
    "dagster",
    "dagster_webserver",
    "llama_index",
    "llama_index.node_parser",
    "llama_index.retrievers",
    "llama_index.query_engine",
    "llama_index.response_synthesizers",
    "llama_index.indices.knowledge_graph",
    "wasmtime",
    "asyncpg",
    "uor_addr",
    "jsonschema",
    "pyshacl",
    "rdflib",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 79
